<resources>
    <string name="app_name">FlyingReed</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_user_center">User Center</string>
    <string name="monday">1</string>
    <string name="tuesday">2</string>
    <string name="wednesday">3</string>
    <string name="thursday">4</string>
    <string name="friday">5</string>
    <string name="saturday">6</string>
    <string name="sunday">7</string>
</resources>
