<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/monday"
        android:textColor="@color/colorRed"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tuesday"
        app:layout_constraintStart_toStartOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tuesday"
        android:textColor="@color/colorOrange"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/wednesday"
        app:layout_constraintRight_toLeftOf="@id/thursday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday" />

    <TextView
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/wednesday"
        android:textColor="@color/colorYellow"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tuesday"
        app:layout_constraintTop_toBottomOf="@+id/tuesday" />

    <TextView
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/thursday"
        android:textColor="@color/colorSpringGreen"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@+id/saturday"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="@id/tuesday" />

    <TextView
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/friday"
        android:textColor="@color/colorLightSkyBlue"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/saturday"
        app:layout_constraintRight_toRightOf="@id/saturday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/saturday"
        android:textColor="@color/colorCyan"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/sunday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/thursday"
        app:layout_constraintTop_toBottomOf="@+id/friday" />

    <TextView
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sunday"
        android:textColor="@color/colorMediumPurple"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/saturday"
        app:layout_constraintTop_toBottomOf="@+id/saturday" />

</android.support.constraint.ConstraintLayout>